src/objects/DEN_AppointmentLock__c.object
<CustomObject>
    <fields>
        <fullName>AppointmentTime__c</fullName>
        <label>AppointmentTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeleteTime__c</fullName>
        <formula>CreatedDate  + 65/1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeleteTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dentist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dentist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DEN_AppointmentLocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DEN_AppointmentLock</label>
    <nameField>
        <label>DEN_AppointmentLock Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DEN_AppointmentLocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>